3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/object.c: Set op->events=NULL in reset_object(), and move the
   clearing of the op->events structure to be before the memset in
   clear_object() - this was otherwise resulting in a memory leak,
   as memset would clear the pointer without actually freeing the data.
server/attack.c: Fix indentation of hit_map(), modify it so that attacks
   won't destroy items with no_pass set.
server/login.c: set op->speed=0, call update_ob_speed() before calling
   reset_object() - fixes problem with players not moving with recent
   changes to initting the active lists to NULL.
msw 2003-12-20


server/skills.c: changed NDI_UNIQUE to NDI_BLACK for the meditation
   message (so that messages can correctly be grouped, also makes it
   coherent with praying).
Ryo 2003-12-20

Those fixes deal with gcc3.3 infinite loop.
Fixes (except sizeof/memset) courtesy Bernd Edler.
---
common/item.c: use right buffer size for safe_strcat.
common/object.c: clear active_next and active_prev when cleaning an object.
include/define.h: fixed *curlen=maxlen-1; instead of *curlen=maxlen=1;
socket/init.c: initialize whole ns->inbuf.buf, instead of setting first
   element only to 0. Also allocated with a sizeof( unsigned char ) * size,
   in case size changes one day. And initialize some more fields.
Ryo 2003-12-18


Those changes deal only with warning cleaning under Windows.
Mostly, using the right type at the right place, or doing explicit casts.
---
common/object.c: changed free_arr_[xy] to short[] instead of int[].
include/global.h: changed free_arr_[xy] to short[] instead of int[].